<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ratebox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="src">Input Movie Title</string>
    <string name="srcText">Search by Movie Title</string>
    <string name="loc">Locate</string>
    <string name="btnClear">Clear Search</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSearch">Search</string>
    <string name="noResultStr">No Search Results</string>
    <string name="title_activity_movie_ratings">MovieRatingsActivity</string>
    <string name="dummyText">Dummy Text</string>
    <string name="critic">Critic Rating</string>
    <string name="audience">Audience Rating</string>
    <string name="synopsis">Synopsis</string>

</resources>
